--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body {
     margin: 0;
 }
 
+p {
+    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
+    font-family: 'Poppins', sans-serif;
+}
+
 .banner-image {
     background-image: url(/images/donation13.jpg);
     background-position: center;
@@ -31,7 +37,7 @@ body {
 .donate-btn {
     text-decoration: none;
     background-color: #ff5959;
-    padding: 15px 30px;
+    padding: 15px 40px;
     color: white;
     border-radius: 5px;
 }
@@ -124,10 +130,30 @@ input {
 
 }
 
+.subscription-option {
+    background-color: #FFF4D6;
+    padding: 70px;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-bottom: 5%;
+}
+
+.subscription-option .email-input {
+    height: 44px;
+    width: 50%;
+}
+
 footer {
     color: white;
     text-align: center;
     background-color: black;
     padding: 30px;
     margin: 0 auto;
+}
+
+footer h1 {
+    color: #FF5959;
+    font-family: 'Lobster', cursive;
+    font-family: 'Lobster Two', cursive;
 }
